
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#2878] Ensure resource panel is marked dirty when drag/dropping into TV
- [#2828] Fix issue with incorrect content field name for FC rules
- [#2863] Fix order of execution issues with FC rules and default values
- [#2874] Enhance User blockedafter/blockeduntil fields to accept time as well as date values
- [#2529] Fix automatic publish/unpublish
- Adjust FC rule ranks to properly account for prior FC rules that may affect FC constraints
- Update xPDO to 2.0.0-pl release
- [#2661] Fix Template getList processor to respect authority
- [#313] Fix header error with binary modStaticResource downloads
- [#206] Fix session bug with opcode caching systems like APC, WinCache, eAccelerator
- [#2846] Add tag syntax to description hover text for resource fields
- [#2849] Add ability to drag/drop onto TV fields
- [#2848] Fix issue with file edit and base paths
- [#2802] Ensure Category tab is hidden when all TVs are hidden in that Category
- [#2779] Added Content Editor policy to default list of policies
- [#2819] Fix bug in FC rules where parent constraint was not traversing up tree to inherit parents
- [#2744] Fix bug with empty template and TV values
- [#2841] Fix bug with File Edit page and modFileHandler reference
- [#2839] Fix bug with failed login count not being updated
- Add ability to view permissions inherited when viewing an ACL row in a grid
- [#2834] Fix issue where constraint class was not set on new FC rules
- [#2819] Fix issue with FC rules and execution order due to setting default templates, constraints
- [#2830] Permit ability to change FC Set Template when editing a FC Set
- [#2827] Fix issues related to FC upgrade with Rules with comma-separated names, differing constraints, and template setting